Fix border overflow form figur

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: rgb(206, 158, 38);
+  overflow: hidden;
 }
 
 .p {
